tdf#168572: crash during markdown export when Writer doc contains a formula

(cherry picked from commit 6ed10a3e493a944d1e8462c46a6a98b7aff07d0b)

Change-Id: I7604aa1c603e41fdd2c45c8de780329abe83ffb7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191624
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>